Fixed ProjectCard padding on mobile

--- a/src/components/style/ProjectCard.css
+++ b/src/components/style/ProjectCard.css
@@ -63,7 +63,7 @@
         height: fit-content;
         border-radius: 10.68vw;
         margin-bottom: 5.59vw;
-        padding: 5.34vw 5.34vw 7.12vw 5.34vw;
+        padding: 5.34vw;
         flex-direction: column;
         gap: 6vw;
     }
